Improve Czech translation
I believe this sounds more natural and less like a machine translation.

--- a/locales/cs/messages.po
+++ b/locales/cs/messages.po
@@ -13,7 +13,7 @@ msgstr ""
 "Plural-Forms: nplurals=4; plural=(n == 1 && n % 1 == 0) ? 0 : (n >= 2 && n <= 4 && n % 1 == 0) ? 1: (n % 1 != 0 ) ? 2 : 3;\n"
 
 msgid "header.subtitle"
-msgstr "prosím nezdravte jenom lidi v chatu"
+msgstr "prosím neposílejte v chatu jenom pozdrav"
 
 msgid "header.introduction"
 msgstr ""
@@ -46,7 +46,7 @@ msgid "example.bad.body"
 msgstr ""
 "Uvědomte si že Keith mohl mít jeho odpověď o několik minut dříve, a nemusel zdržovat Tima. Tim vlastně mohl začít okamžitě přemýšlet o odpovědi!\n"
 "\n"
-"Lidé co tohle dělají se většinou snaží ukázat zdvořilost tím že nejdříve pozdraví, tak jako v realitě nebo na telefonu - a to je skvělé! Ale tohle je rok %1$s a chat není ani jednou z těchto věcí. Pro většinu lidí je psaní pomalejší než mluvení. Takže i přesto že vaše úmysly jsou dobré, **ve finále toho druhého člověka pouze nutíte čekat** než položíte svoji otázku, což je ztracená produktivita (a vlastně i otravné).\n"
+"Lidé co tohle dělají se většinou snaží být zdvořilí tím že nejdříve pozdraví, tak jako v realitě nebo na telefonu - a to je skvělé! Ale tohle je rok %1$s a chat není ani jednou z těchto věcí. Pro většinu lidí je psaní pomalejší než mluvení. Takže i přesto že vaše úmysly jsou dobré, **ve finále toho druhého člověka pouze nutíte čekat** než položíte svoji otázku, což je ztracená produktivita (a vlastně i otravné).\n"
 "\n"
 "To samé platí pro:\n"
 "\n"
